# aOIDC

./: .gitignore  Justfile  README.md  flake.nix  pyproject.toml
aoidc/: __main__.py  config.py  jwt.py  utils.py  version.py
aoidc/battery/fastapi/: __init__.py  __main__.py
aoidc/errors/: __init__.py
aoidc/oauth2/: client.py  context.py  enums.py
aoidc/oauth2/rfc_6749_oauth/: __init__.py  models.py
aoidc/oauth2/rfc_7591_dynamic_client/: enums.py
aoidc/oauth2/rfc_8414_server_metadata/: __init__.py  enum.py  metadata.py  resolver.py  subtypes.py
aoidc/oidc/: __init__.py  models.py  oidc.py
aoidc/oidc/discovery/: __init__.py  metadata.py
nix/: base-vm.nix  vm.nix
nix/vms/: kanidm.nix
