[project]
name = "aoidc"
version = "0.0.1"
description = "Suckless implementation of OIDC with asyncs in mind"
authors = [{ name = "Rubikoid", email = "rubikoid@rubikoid.ru" }]
requires-python = ">= 3.12, < 4"

dependencies = [
    "httpx >= 0.28.1, < 1",
    "joserfc >= 1.6.1, < 2",
    "msgspec >= 0.19.0, < 1",
    "pydantic >= 2.10.6, < 3",
    "pydantic-settings >= 2.8.1, < 3",
]

[project.optional-dependencies]


[dependency-groups]
dev = ["ruff", "black", "pytest>=8.3.4"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = false

[tool.black]
line-length = 120
target-version = ['py312']
