[project]
name = "aoidc"
description = "Suckless implementation of OIDC with asyncs in mind"

authors = [{ name = "Rubikoid", email = "rubikoid@rubikoid.ru" }]

requires-python = ">= 3.12, < 4"

readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Framework :: AsyncIO",
]

dynamic = ["version"]

dependencies = [
    "httpx >= 0.28.1, < 1",
    "joserfc >= 1.6.1, < 2",
    "pydantic >= 2.10.6, < 3",
    "pydantic-settings >= 2.8.1, < 3",
]


[project.optional-dependencies]
fastapi = ["fastapi >= 0.128.0, < 1"]

[dependency-groups]
dev = [
    "ruff >= 0.15.0, < 1",
    "pytest >= 8.3.4, < 9",
    "structlog >= 25.5.0, < 26",
]

[build-system]
requires = ["hatchling ~= 1.28.0", "editables ~= 0.5"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aoidc/"]

[tool.hatch.version]
path = "aoidc/version.py"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FIX001", # | line-contains-fixme                                   | i can track it with vscode & grep
    "FIX002", # | line-contains-todo                                    | i can track it with vscode & grep
    "TD00",   # | missing-todo-...                                      | i can track it with git
    "D100",   # | undocumented-public-module                            | i belive can track it myself
    "D101",   # | undocumented-public-class                             | i belive can track it myself
    "D102",   # | undocumented-public-method                            | i belive can track it myself
    "D103",   # | undocumented-public-function                          | i belive can track it myself
    "D104",   # | undocumented-public-package                           | i belive can track it myself
    "D107",   # | undocumented-public-init                              | i belive can track it myself
    "D200",   # | One-line docstring should fit on one line             | styling
    "D202",   # | blank-line-after-function                             | styling
    "D203",   # | 1 blank line required before class docstring          | styling
    "D205",   # | missing-blank-line-after-summary                      | styling
    "D212",   # |                                                       | styling
    "ERA001", # | commented code                                        | styling
    "ANN001", # | Missing type annotation for function argument         | it's okay here ;(, i will track it myself
    "ANN20",  # | Missing type annotation                               | i can thack it myself
    "EM101",  # | raw-string-in-exception                               | 
    "TRY003", # | raise-vanilla-args                                    |
    "RET504", # | unnecessary-assign                                    |
    "RUF012", # | mutable-class-default                                 | i cat track it by myself
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.black]
line-length = 120
target-version = ['py312']
